projects/vb6parse/snapshots/syntax/library/statements/mkdir/mkdir_at_module_level.snap
---
source: projects/vb6parse/src/syntax/library/statements/filesystem/mkdir.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: MkDirStatement
      children:
        - kind: MkDirKeyword
          text: MkDir
        - kind: Whitespace
          text: " "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"C:\\Temp\""
