projects/vb6parse/snapshots/syntax/library/statements/mkdir/mkdir_preserves_whitespace.snap
---
source: projects/vb6parse/src/syntax/library/statements/filesystem/mkdir.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: MkDirStatement
      children:
        - kind: MkDirKeyword
          text: MkDir
        - kind: Whitespace
          text: "    "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"MyFolder\""
    - kind: Whitespace
      text: "    "
    - kind: Newline
      text: "\n"
